--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "cd client && npm run build",
+  "version": 2,
+  "buildCommand": "npm run build",
   "outputDirectory": "client/dist",
   "framework": "vite",
   "rewrites": [
